--- a/aig/backpackers.html
+++ b/aig/backpackers.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" type="text/css" href="https://www.aig.co.il/travel/app/aboard.min.css?v=2_2_0">
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
