--- a/aig/checkout.html
+++ b/aig/checkout.html
@@ -21,7 +21,7 @@
         <div class="container ng-scope">
           <div class="row">
             <div class="col-sm-12" style="color: red; font-size: 250%;">
-              טופס להדגמה בלבד
+              טופס להדגמה בלבד, אין צורך למלא
             </div>
           </div>
           <div class="row">
