--- a/example_redirect.html
+++ b/example_redirect.html
@@ -1,4 +1,4 @@
-<html style="font-family: -apple-system, BlinkMacSystemFont, sans-serif;">
+<html style="line-height: 1.5; font-family: -apple-system, BlinkMacSystemFont, sans-serif;">
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
