--- a/example_redirect.html
+++ b/example_redirect.html
@@ -34,7 +34,7 @@
     }
 
     if(queryParams['redirectEncodedUriComponent']){
-      var elem = document.getElementById('custom-message');
+      var elem = document.getElementById('redirect-message');
       var time = 10;
       elem.innerText = redirectMessage(time);
       window.setInterval(function() {
