--- a/insurance/english/travel_basic.html
+++ b/insurance/english/travel_basic.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" type="text/css" href="https://www.aig.co.il/travel/app/aboard.min.css?v=2_2_0">
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
-  <body>
+  <body style="direction: ltr">
     <div class="aig-abroad">
       <div id="modal-body-id" class="modal-body container single-package-details-wrapper ng-scope">
         <table class="table table-bordered" valign="middle">
