--- a/insurance/english/backpackers.html
+++ b/insurance/english/backpackers.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
-<body>
+<body style="direction: ltr">
   <div class="aig-abroad">
     <div id="modal-body-id" class="modal-body container single-package-details-wrapper ng-scope">
       <table class="table table-bordered" valign="middle">
