make credit card page return to bot

--- a/credit-card/index.html
+++ b/credit-card/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="container-fluid">
         <div class="creditCardForm">
-            <p>Sample form - no need to fill out</p>
+            <p style="font-size: 10pt; color: #3A56B7">*** Sample form - no need to fill out. Just press confirm to continue the purchase. ***</p>
             <div class="heading">
                 <h1>Confirm Purchase</h1>
 
